# from_scratch

./: README.md  pyproject.toml
src/kmeans/: model.ipynb
src/kmeans/data/: data.py
src/neural_net/: model.ipynb
