[project]
name = "from-scratch"
version = "0.1.0"
description = "Building algorithms from scratch in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
]
